# ows

./: .gitignore  CODEOWNERS  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  sbom.yml  version-bump.yml
bindings/node/: Cargo.toml  README.md  package-lock.json  package.json  publish.mjs
bindings/node-adapters/: README.md  package-lock.json  package.json
bindings/node-adapters/__test__/: solana.spec.mjs  viem.spec.mjs  wdk.spec.mjs
bindings/node-adapters/src/: index.d.ts  index.js  solana.d.ts  solana.js  viem.d.ts  viem.js  wdk.d.ts  wdk.js
bindings/node/__test__/: index.spec.mjs
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/ows/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_bindings.py
docs/: 00-specification.md  01-storage-format.md  02-chain-agnostic-addressing.md  02-signing-interface.md  03-policy-engine.md  03-signing-interface.md  04-agent-access-layer.md  04-policy-engine.md  05-key-isolation.md  06-agent-access-layer.md  07-multi-chain-support.md  07-supported-chains.md  08-conformance-and-security.md  08-wallet-lifecycle.md  quickstart.md  sdk-cli.md  sdk-node.md  sdk-python.md
docs/superpowers/plans/: 2026-03-30-eip712-api-key-signing.md
docs/superpowers/specs/: 2026-03-30-eip712-api-key-signing-design.md
lws/: install.sh
lws/crates/lws-cli/: Cargo.toml  build.rs
lws/crates/lws-cli/src/: audit.rs  main.rs  vault.rs
lws/crates/lws-cli/src/commands/: mod.rs  send_transaction.rs  sign_message.rs  sign_transaction.rs  update.rs  wallet.rs
lws/crates/lws-core/src/: caip.rs  error.rs  lib.rs  types.rs  wallet_file.rs
lws/crates/lws-lib/: Cargo.toml
lws/crates/lws-lib/src/: error.rs  ops.rs
lws/crates/lws-signer/: Cargo.toml
lws/crates/lws-signer/src/: crypto.rs
lws/crates/lws-signer/src/chains/: cosmos.rs  ton.rs
ows/: README.md  install.sh
ows/crates/ows-cli/: Cargo.toml  README.md
ows/crates/ows-cli/src/: audit.rs
ows/crates/ows-cli/src/commands/: pay.rs  policy.rs  send_transaction.rs  sign_message.rs  uninstall.rs  update.rs
ows/crates/ows-core/: Cargo.toml
ows/crates/ows-core/src/: chain.rs  config.rs  lib.rs  policy.rs
ows/crates/ows-lib/: Cargo.toml
ows/crates/ows-lib/src/: key_ops.rs  lib.rs  nano_rpc.rs  ops.rs  policy_engine.rs  vault.rs
ows/crates/ows-pay/: Cargo.toml
ows/crates/ows-pay/src/: chains.rs  discovery.rs  fund.rs  types.rs  x402.rs
ows/crates/ows-signer/: Cargo.toml
ows/crates/ows-signer/src/: crypto.rs  hd.rs  lib.rs
ows/crates/ows-signer/src/chains/: cosmos.rs  evm.rs  mod.rs  nano.rs  solana.rs
readme/: generate.sh
readme/partials/: architecture.md  cli-reference.md  supported-chains.md  why-ows.md
readme/templates/: node.md  ows.md  python.md
scripts/: set-version.sh
skills/lws/: SKILL.md
skills/ows/: SKILL.md
skills/ows/references/: node.md
website/: index.html
website-docs/: index.html
website-docs/js/: docs.js
website-docs/md/: 01-storage-format.md  05-key-isolation.md  06-wallet-lifecycle.md  policy-engine-implementation.md  sdk-node.md
website/css/: style.css
website/docs/: doc.html  index.html
website/js/: main.js  terminal-demo.js
