[package]
name = "lws-python"
version = "0.2.26"
edition = "2021"
description = "Python native bindings for the Lightweight Wallet Signer"

[lib]
name = "lws"
crate-type = ["cdylib"]

[dependencies]
lws-lib = { path = "../../lws/crates/lws-lib" }
pyo3 = { version = "0.22", features = ["extension-module"] }
