[package]
name = "ows-python"
version = "1.2.4"
edition = "2021"
description = "Python native bindings for the Open Wallet Standard"

[lib]
name = "ows"
crate-type = ["cdylib"]

[features]
default = []
fast-kdf = ["ows-lib/fast-kdf"]

[dependencies]
ows-lib = { path = "../../ows/crates/ows-lib" }
ows-core = { path = "../../ows/crates/ows-core" }
serde_json = "1"
pyo3 = { version = "0.24.1", features = ["extension-module"] }
