[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "local-wallet-standard"
version = "0.2.26"
description = "Python native bindings for the Lightweight Wallet Signer"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "lws._native"
