[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "open-wallet-standard"
version = "1.2.4"
description = "Python native bindings for the Open Wallet Standard"
requires-python = ">=3.8"
license = { text = "MIT" }
readme = "README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "ows._native"
