[package]
name = "lws-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Lightweight Wallet Signer"

[[bin]]
name = "lws"
path = "src/main.rs"

[dependencies]
lws-core = { path = "../lws-core" }
lws-signer = { path = "../lws-signer" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
thiserror = "2"
tempfile = "3"
