[package]
name = "lws-cli"
version = "0.2.0"
edition = "2021"
description = "CLI for the Lightweight Wallet Signer"

[[bin]]
name = "lws"
path = "src/main.rs"

[dependencies]
lws-core = { path = "../lws-core" }
lws-signer = { path = "../lws-signer" }
lws-lib = { path = "../lws-lib" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
thiserror = "2"
tempfile = "3"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
getrandom = "0.2"
