[package]
name = "ows-cli"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "CLI for the Open Wallet Standard"
repository = "https://github.com/open-wallet-standard/core"
readme = "README.md"

[[bin]]
name = "ows"
path = "src/main.rs"

[dependencies]
ows-core = { path = "../ows-core", version = "=0.3.1" }
ows-signer = { path = "../ows-signer", version = "=0.3.1" }
ows-lib = { path = "../ows-lib", version = "=0.3.1" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
thiserror = "2"
tempfile = "3"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
zeroize = "1"

[dev-dependencies]
ows-signer = { path = "../ows-signer", version = "=0.3.1", features = ["fast-kdf"] }
