[package]
name = "ows-cli"
version = "0.5.7"
edition = "2021"
license = "MIT"
description = "CLI for the Open Wallet Standard"
repository = "https://github.com/open-wallet-standard/core"
readme = "README.md"

[[bin]]
name = "ows"
path = "src/main.rs"

[dependencies]
ows-core = { path = "../ows-core", version = "=0.5.7" }
ows-signer = { path = "../ows-signer", version = "=0.5.7" }
ows-lib = { path = "../ows-lib", version = "=0.5.7" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
thiserror = "2"
tempfile = "3"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
zeroize = "1"
ows-pay = { path = "../ows-pay", version = "=0.5.7" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
ows-signer = { path = "../ows-signer", version = "=0.5.7", features = ["fast-kdf"] }
