[package]
name = "ows-cli"
version = "1.2.4"
edition = "2021"
license = "MIT"
description = "CLI for the Open Wallet Standard"
repository = "https://github.com/open-wallet-standard/core"
readme = "README.md"

[[bin]]
name = "ows"
path = "src/main.rs"

[dependencies]
ows-core = { path = "../ows-core", version = "=1.2.4" }
ows-signer = { path = "../ows-signer", version = "=1.2.4" }
ows-lib = { path = "../ows-lib", version = "=1.2.4" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
thiserror = "2"
tempfile = "3"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
zeroize = "1"
ows-pay = { path = "../ows-pay", version = "=1.2.4" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
ows-signer = { path = "../ows-signer", version = "=1.2.4", features = ["fast-kdf"] }
