[package]
name = "ows-core"
version = "1.2.4"
edition = "2021"
license = "MIT"
description = "Core types and traits for the Open Wallet Standard"
repository = "https://github.com/open-wallet-standard/core"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
